Fixing responsiveness of planner page and removing the user name invisibility aspect from the responsiveness.

--- a/style/main.css
+++ b/style/main.css
@@ -913,6 +913,9 @@ body {
   max-width: 100vw;
 }
 
+
+
+
 /* Responsiveness */
 /* Home Page */
 @media (max-width: 1000px) {
@@ -1040,7 +1043,7 @@ body {
   .buttonWraper {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     width: 100%;
     gap: 1rem;
     justify-content: space-between;
@@ -1057,9 +1060,9 @@ body {
   }
 
   #selectedDate {
-    font-size: large;
+    font-size: x-large;
     text-align: center;
-    justify-content: flex-start;
+    justify-content: center;
     padding: 3%;
     gap: 0;
     margin-bottom: 0;
@@ -1080,8 +1083,8 @@ body {
   main {
     flex: 1;
   }
-
-  #usernameDisplay {
-    opacity: 0;
+  
+  .usernameDisplay{
+    padding: 10%;
   }
 }
